<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.EnquireActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:padding="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="Name"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/drawable_round_border"
            android:hint="Full Name"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/_5sdp"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="Email"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/drawable_round_border"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_5sdp"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="Country"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/_10sdp" />

        <Spinner
            android:id="@+id/spnCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:entries="@array/countries_array"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/drawable_round_border"
            android:paddingLeft="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="Phone Number"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/drawable_round_border"
            android:hint="Phone Number"
            android:inputType="phone"
            android:paddingLeft="@dimen/_5sdp"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="Message"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/drawable_round_border"
            android:hint="Enter your message here..."
            android:inputType="text"
            android:gravity="top"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_9sdp" />

        <Button
            android:id="@+id/btnEnquiry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/drawable_button"
            android:stateListAnimator="@null"
            android:onClick="submitEnquiry"
            android:text="Submit"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>
</layout>